# Aqua

./: .gitignore  CMakeLists.txt  LICENSE
assets/shaders/: main.frag.glsl  main.vert.glsl  vertex.frag.glsl  vertex.vert.glsl
demos/: CMakeLists.txt  demo.cpp
include/: CMakeLists.txt
include/Application/: Application.h
include/Core/: Core.h  Platform.h
include/Debug/: Debug.h  Profile.h
include/EventSystem/: Event.h  KeyboardEvents.h  MouseEvents.h  NullEvent.h  WindowEvents.h
include/Math/: CMakeLists.txt
include/Math/stm/: CMakeLists.txt  algorithm.h  common.h  comparison.h  complex.h  concept.h  constant.h  conversion.h  error.h  fraction.h  function.h  geometry.h  internal.h  literals.h  math.h  math_internal.h  matrix.h  numeric.h  polar_complex.h  quaternion.h  ranges.h  spatial_transform.h  units.h  utilities.h  vector.h  vector2.h  vector3.h  vector4.h
include/Renderer/: Renderer.h
include/Renderer/Vulkan/: VulkanBuffer.h  VulkanBufferBase.h  VulkanCore.h  VulkanDebug.h  VulkanDevice.h  VulkanImage.h  VulkanRenderer.h  VulkanTexture.h  VulkanVertex.h
include/Utils/: ShaderCompilation.h
include/Window/: Window.h  WindowInternal.h
src/: CMakeLists.txt  other.cpp
src/Application/: Application.cpp
src/Debug/: Profile.cpp
src/Renderer/: Renderer.cpp
src/Renderer/Vulkan/: VulkanBuffer.cpp  VulkanBufferBase.cpp  VulkanDebug.cpp  VulkanDevice.cpp  VulkanImage.cpp  VulkanRenderer.cpp  VulkanTexture.cpp
src/Utils/: ShaderCompilation.cpp
src/Window/: Window.cpp
